fix: adjust drawer searchbar intelligent-search on tablet

--- a/styles/css/phone/header/vtex.store-drawer.css
+++ b/styles/css/phone/header/vtex.store-drawer.css
@@ -1,6 +1,5 @@
-.openIconContainer {
-    color     : #ffff;
-    align-self: center;
+.drawer--phone__drawer-searchbar {
+    max-width: initial !important;
 }
 
 .drawerContent--phone__drawer_login {
